--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -35,7 +35,7 @@ jobs:
 
 
       - name: copy index.html, css, js
-        run: cp dist/mycv/browser/. docs
+        run: cp dist/mycv/browser/*.* docs
 
       - name: list docs
         run: ls -la docs
