--- a/.github/workflows/deploy_release.yml
+++ b/.github/workflows/deploy_release.yml
@@ -1,35 +1,33 @@
-name: CI/CD deploy release 
+name: CI/CD deploy release
 on: 
- push:
+  push:
     branches: [ "deploy-release"]
   #pull_request:
    # branches: [ "deploy-release"]
 jobs:
   ci_cd_deploy_release:
     runs-on: ubuntu-latest
-   
     permissions:
       # Give the default GITHUB_TOKEN write permission to commit and push the
       # added or changed files to the repository.
       contents: write
 
-
     steps:
-      - run: ls -la 
+      - run: ls -la
       - uses: actions/checkout@v2
       - run: ls -la
-      - run: echo 'hello universe'
+      - run: echo 'hello world'
       - name: Use Node.js 20.x
         uses: actions/setup-node@v1
         with:
           node-version: 20.x
-          
+
       - name: install dependencies 
         run: npm ci
 
       - name: build setup
         run: npm run build
-     
+
       - name: list dir
         run: ls -la dist/mycv/browser
 
@@ -40,13 +38,13 @@ jobs:
       - name: list docs
         run: ls -la docs
 
-      - name: git commit
+      - name: GIT commit and push docs
         env: 
          CI_COMMIT_MESSAGE: save spark results
-         CI_COMMIT_AUTHOR: adrian
-        run: |
-          git config --global user.name "${{ env.CI_COMMIT_AUTHOR }}"
-          git config --global user.email "andryk@live.com.mx"
-          git add docs
-          git commit -m "${{ env.CI_COMMIT_MESSAGE }}"
-          git push
+         CI_COMMIT_AUTHOR: manu
+        run: | 
+         git config --global user.name "Andryj"
+         git config --global user.email "andryj@gmail.com"
+         git add .
+         git commit -m "${{ env.CI_COMMIT_MESSAGE }}"
+         git push 
